[gd_scene load_steps=84 format=2]

[ext_resource path="res://entities/sword_figher/peer_sword_fighter.gd" type="Script" id=1]
[ext_resource path="res://entities/sword_figher/model/sword_fighter.glb" type="PackedScene" id=2]
[ext_resource path="res://objects/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/sword_figher/dust_trail.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/sword_figher/model/rope/rope_export.dae" type="PackedScene" id=5]
[ext_resource path="res://entities/sword_figher/animation_events.gd" type="Script" id=6]
[ext_resource path="res://entities/sword_figher/model/temp/fall.anim" type="Animation" id=7]
[ext_resource path="res://entities/sword_figher/model/temp/air_atk_r.anim" type="Animation" id=8]
[ext_resource path="res://entities/sword_figher/model/temp/run_loop_c.anim" type="Animation" id=9]
[ext_resource path="res://effects/slash/slash.glb" type="PackedScene" id=10]
[ext_resource path="res://effects/slash/Material.material" type="Material" id=11]
[ext_resource path="res://effects/hit/hexagon.png" type="Texture" id=12]

[sub_resource type="AnimationNodeBlend2" id=1]

[sub_resource type="AnimationNodeTimeSeek" id=2]

[sub_resource type="AnimationNodeTimeScale" id=3]

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "t_pose"

[sub_resource type="AnimationNodeTimeSeek" id=5]

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "t_pose"

[sub_resource type="AnimationNodeTimeSeek" id=7]

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( 0, -72 )
nodes/1_and_-1/node = SubResource( 1 )
nodes/1_and_-1/position = Vector2( 820, -40 )
nodes/Seek/node = SubResource( 2 )
nodes/Seek/position = Vector2( 1060, 0 )
nodes/TimeScale/node = SubResource( 3 )
nodes/TimeScale/position = Vector2( 1180, 0 )
nodes/animation_-1/node = SubResource( 4 )
nodes/animation_-1/position = Vector2( 420, 40 )
nodes/animation_-1_seek/node = SubResource( 5 )
nodes/animation_-1_seek/position = Vector2( 620, 40 )
nodes/animation_1/node = SubResource( 6 )
nodes/animation_1/position = Vector2( 420, -80 )
nodes/animation_1_seek/node = SubResource( 7 )
nodes/animation_1_seek/position = Vector2( 620, -80 )
nodes/output/position = Vector2( 1340, 0 )
node_connections = [ "output", 0, "TimeScale", "1_and_-1", 0, "animation_1_seek", "1_and_-1", 1, "animation_-1_seek", "Seek", 0, "1_and_-1", "TimeScale", 0, "Seek", "animation_-1_seek", 0, "animation_-1", "animation_1_seek", 0, "animation_1" ]

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationTree:parameters/1_and_-1/blend_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationTree:parameters/anim_and_space/blend_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=11]
step = 0.0166667
tracks/0/type = "animation"
tracks/0/path = NodePath("ModelContainer/sword_fighter/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"clips": PoolStringArray( "offensive_stance" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/attack/blend_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationTree:parameters/Seek/seek_position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationTree:parameters/stand_walk/blend_amount")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.183333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationTree:parameters/stand_seek/seek_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 1.16667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("../../AnimationFlags:is_evade_cancelable")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.916667 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../AnimationFlags:is_stringable")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.583333 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.16667 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "off_h_r_heavy" ],
"method": "animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../AnimationFlags:is_cancelable")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.983333 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../AnimationFlags:no_root_motion_to_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
length = 1.16667
step = 0.0166667
tracks/0/type = "animation"
tracks/0/path = NodePath("ModelContainer/sword_fighter/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "off_hi_fierce" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
step = 0.0166667
tracks/0/type = "animation"
tracks/0/path = NodePath("ModelContainer/sword_fighter/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "offensive_stance" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/attack/blend_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationTree:parameters/Seek/seek_position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationTree:parameters/stand_walk/blend_amount")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationTree:parameters/walk_seek/seek_position")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=15]
length = 0.483333

[sub_resource type="Animation" id=16]
length = 1.08333

[sub_resource type="Animation" id=17]
length = 1.5

[sub_resource type="Animation" id=18]
length = 1.38333

[sub_resource type="Animation" id=19]
length = 0.001

[sub_resource type="Animation" id=20]
length = 0.001

[sub_resource type="Animation" id=21]
length = 0.683333

[sub_resource type="Animation" id=22]
length = 0.5

[sub_resource type="Animation" id=23]
length = 0.5

[sub_resource type="Animation" id=24]
length = 0.5

[sub_resource type="Animation" id=25]
length = 0.5

[sub_resource type="Animation" id=26]

[sub_resource type="Animation" id=27]

[sub_resource type="Animation" id=28]
length = 0.966667

[sub_resource type="Animation" id=29]
length = 0.7

[sub_resource type="Animation" id=30]
length = 2.26667

[sub_resource type="Animation" id=31]
length = 0.001

[sub_resource type="Animation" id=32]
length = 1.33333

[sub_resource type="Animation" id=33]
length = 0.001

[sub_resource type="Animation" id=34]
length = 0.001

[sub_resource type="Animation" id=35]
length = 0.833333

[sub_resource type="Animation" id=36]
length = 0.383333

[sub_resource type="Animation" id=37]
length = 1.16667

[sub_resource type="Animation" id=38]
length = 0.916667

[sub_resource type="Animation" id=39]
length = 0.666667

[sub_resource type="Animation" id=40]
length = 0.666667

[sub_resource type="Animation" id=41]

[sub_resource type="Animation" id=42]
length = 0.333333

[sub_resource type="Animation" id=43]
length = 0.583333

[sub_resource type="Animation" id=44]
length = 1.93333

[sub_resource type="Animation" id=45]
length = 2.25

[sub_resource type="Animation" id=46]
length = 0.833333

[sub_resource type="Animation" id=47]
length = 1.33333

[sub_resource type="Animation" id=48]

[sub_resource type="Animation" id=49]
length = 0.833333

[sub_resource type="Animation" id=50]
length = 0.833333

[sub_resource type="Animation" id=51]

[sub_resource type="Animation" id=52]
length = 2.18333
step = 0.0166667
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.16667 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "throw_stared"
}, {
"args": [  ],
"method": "throw_ended"
} ]
}

[sub_resource type="Animation" id=53]
length = 0.25

[sub_resource type="Animation" id=54]
length = 0.166667

[sub_resource type="Animation" id=55]
length = 0.516667

[sub_resource type="Animation" id=56]
length = 0.516667

[sub_resource type="Animation" id=57]
length = 0.933333

[sub_resource type="Animation" id=58]
length = 0.833333

[sub_resource type="Animation" id=59]
length = 0.666667

[sub_resource type="Animation" id=60]
length = 0.45

[sub_resource type="Animation" id=61]
length = 0.416667

[sub_resource type="Animation" id=62]
length = 0.2

[sub_resource type="Animation" id=63]
length = 0.666667

[sub_resource type="Animation" id=64]
length = 0.833333

[sub_resource type="Animation" id=65]
length = 0.001

[sub_resource type="Curve" id=88]
_data = [ Vector2( 0.250909, 0 ), 0.0, 0.055563, 0, 0, Vector2( 0.250909, 1 ), -1.38996, -1.38996, 0, 0, Vector2( 1, 0 ), -0.00435815, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=89]
curve = SubResource( 88 )

[sub_resource type="ParticlesMaterial" id=90]
direction = Vector3( 0, 0, 1 )
spread = 124.05
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 22.46
tangential_accel = -169.4
damping = 179.02
scale = 0.1
scale_random = 0.1
scale_curve = SubResource( 89 )

[sub_resource type="SpatialMaterial" id=91]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_cull_mode = 2
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 12 )

[sub_resource type="QuadMesh" id=87]
material = SubResource( 91 )

[sub_resource type="CapsuleShape" id=66]
radius = 0.459803
height = 0.564789

[node name="PeerSwordFighter" type="KinematicBody"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../ModelContainer/sword_fighter/AnimationPlayer")
process_mode = 0
root_motion_track = NodePath("Armature/Skeleton:root")
parameters/1_and_-1/blend_amount = 0.2
parameters/Seek/seek_position = -1.0
parameters/TimeScale/scale = 1.0
parameters/animation_-1_seek/seek_position = -1.0
parameters/animation_1_seek/seek_position = -1.0

[node name="AnimationBlender" type="AnimationPlayer" parent="."]
anims/blend_animation_1_animation_-1 = SubResource( 9 )
anims/blend_animation_and_space = SubResource( 10 )
anims/idle = SubResource( 11 )
"anims/off_h_r_heavy (copy)" = SubResource( 12 )
anims/off_hi_heavy = SubResource( 13 )
anims/walk = SubResource( 14 )

[node name="AnimationEvents" type="AnimationPlayer" parent="."]
anims/air_atk_r = SubResource( 15 )
anims/air_boost = SubResource( 16 )
anims/air_rope = SubResource( 17 )
anims/dangle = SubResource( 18 )
anims/def_block_hi = SubResource( 19 )
anims/def_block_low = SubResource( 20 )
anims/def_hi_light = SubResource( 21 )
anims/def_step_b = SubResource( 22 )
anims/def_step_f = SubResource( 23 )
anims/def_step_l = SubResource( 24 )
anims/def_step_r = SubResource( 25 )
anims/def_taunt = SubResource( 26 )
anims/defensive_stance = SubResource( 27 )
anims/fall = SubResource( 28 )
anims/jump_land = SubResource( 29 )
anims/jump_start = SubResource( 30 )
anims/knocked_down = SubResource( 31 )
anims/off_block_break = SubResource( 32 )
anims/off_block_hi = SubResource( 33 )
anims/off_block_low = SubResource( 34 )
anims/off_h_r_0001 = SubResource( 35 )
anims/off_h_r_1 = SubResource( 36 )
anims/off_h_r_heavy = SubResource( 37 )
anims/off_hi_fierce = SubResource( 38 )
anims/off_hi_l_light = SubResource( 39 )
anims/off_hi_r_light = SubResource( 40 )
anims/off_kick = SubResource( 41 )
anims/off_run_startup = SubResource( 42 )
anims/off_run_stop = SubResource( 43 )
anims/off_taunt = SubResource( 44 )
anims/off_throw_f = SubResource( 45 )
anims/off_throw_f_startup = SubResource( 46 )
anims/off_walk_back = SubResource( 47 )
anims/off_walk_forward = SubResource( 48 )
anims/off_walk_left = SubResource( 49 )
anims/off_walk_right = SubResource( 50 )
anims/offensive_stance = SubResource( 51 )
anims/receive_off_throw_f = SubResource( 52 )
anims/run_break = SubResource( 53 )
anims/run_break_loop = SubResource( 54 )
anims/run_bump_l = SubResource( 55 )
anims/run_bump_r = SubResource( 56 )
anims/run_loop = SubResource( 57 )
anims/run_loop_2 = SubResource( 58 )
anims/run_loop_c = SubResource( 59 )
anims/run_stop = SubResource( 60 )
anims/run_stop_dash = SubResource( 61 )
anims/run_stop_loop = SubResource( 62 )
anims/stance_def_to_off = SubResource( 63 )
anims/stance_off_to_def = SubResource( 64 )
anims/t_pose = SubResource( 65 )
script = ExtResource( 6 )

[node name="ModelContainer" type="Spatial" parent="."]

[node name="sword_fighter" parent="ModelContainer" instance=ExtResource( 2 )]
transform = Transform( -0.6, 0, -9.05975e-08, 0, 0.6, 0, 9.05975e-08, 0, -0.6, 0, 0, 0 )

[node name="BoneAttachment" type="BoneAttachment" parent="ModelContainer/sword_fighter/Armature/Skeleton" index="2"]
transform = Transform( 1, 0, 0, 0, 0.998474, 0.0552152, 0, -0.0552152, 0.998474, -6.59474e-17, 2.24226, 7.43921e-09 )
bone_name = "torso"

[node name="Hurtbox" parent="ModelContainer/sword_fighter/Armature/Skeleton/BoneAttachment" instance=ExtResource( 3 )]
transform = Transform( 0.547956, -2.98023e-08, 5.21542e-08, 2.98023e-08, 0.547956, 1.49012e-07, -5.21541e-08, -1.49012e-07, 0.547957, 5.96046e-08, 0.25754, -1.19209e-07 )
visible = false
spawn_hit_effect = true

[node name="ThrowAttachment" type="BoneAttachment" parent="ModelContainer/sword_fighter/Armature/Skeleton" index="3"]
bone_name = "throw_pos"

[node name="AnimationPlayer" parent="ModelContainer/sword_fighter" index="1"]
anims/air_atk_r = ExtResource( 8 )
anims/fall = ExtResource( 7 )
anims/run_loop_c = ExtResource( 9 )

[node name="slash" parent="ModelContainer/sword_fighter" instance=ExtResource( 10 )]
transform = Transform( 0.94679, 0, -0.321853, 0, 1, 0, 0.321853, 0, 0.94679, 0, 2.15837, 0 )

[node name="Circle011" parent="ModelContainer/sword_fighter/slash" index="0"]
material/0 = ExtResource( 11 )

[node name="SlashParticles" type="Particles" parent="ModelContainer"]
transform = Transform( -0.564907, 0, 0.202188, 0, 0.6, 0, -0.202188, 0, -0.564907, 0, 1.28032, 0 )
emitting = false
amount = 133
lifetime = 0.6
process_material = SubResource( 90 )
draw_pass_1 = SubResource( 87 )
__meta__ = {
"_editor_description_": ""
}

[node name="Particles2" parent="ModelContainer" instance=ExtResource( 4 )]

[node name="RopePoint" type="Position3D" parent="ModelContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22309, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Rope" parent="ModelContainer" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1.32887, -0.819866 )
visible = false

[node name="CameraPointPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )

[node name="Position3D" type="Position3D" parent="CameraPointPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.6, 1.5 )

[node name="Tween" type="Tween" parent="."]
playback_speed = 3.0
playback/speed = 3.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.74, 0 )
shape = SubResource( 66 )
__meta__ = {
"_editor_description_": ""
}

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
aabb = AABB( -0.05, -0.05, -0.05, 0.1, 0.1, 0.1 )
__meta__ = {
"_editor_description_": ""
}

[node name="HitstopTimer" type="Timer" parent="."]
[connection signal="received_hit" from="ModelContainer/sword_fighter/Armature/Skeleton/BoneAttachment/Hurtbox" to="." method="_on_Hurtbox_received_hit"]
[connection signal="timeout" from="HitstopTimer" to="." method="_on_HitstopTimer_timeout"]

[editable path="ModelContainer/sword_fighter"]

[editable path="ModelContainer/sword_fighter/slash"]
